[project]
name = "evolver-analysis"
version = "0.1.0"
description = "Analysis tools for Evolver meta-optimization results"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antonio J. Nebro", email = "antonio@lcc.uma.es"}
]
keywords = ["meta-optimization", "algorithm configuration", "analysis", "visualization"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
interactive = [
    "plotly>=5.18.0",
    "ipywidgets>=8.0.0",
]

[project.scripts]
evolver-analyze = "meta_optimization_analysis:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]
