[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolver"
version = "1.0.0"
authors = [
  { name="José F. Aldana Martín", email="jfaldanam@uma.es" },
  { name="Antonio J. Nebro", email="ajnebro@uma.es" },
]
description = "Visualization and execution dashboard for the Evolver project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "streamlit",
]

[project.urls]
"Homepage" = "https://github.com/jMetal/Evolver"
"Bug Tracker" = "https://github.com/jMetal/Evolver/issues"

[project.optional-dependencies]
dev = [
  "isort",
  "black",
  "coverage",
  "ruff",
]
complete = [
  "evolver[dev]",
]